# netbox-catalyst-center

./: CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
netbox_catalyst_center/: __init__.py  catalyst_client.py  forms.py  models.py  navigation.py  neighbors.py  urls.py  views.py  widgets.py
netbox_catalyst_center/migrations/: 0001_initial.py  0002_mark_stub_model_private.py
netbox_catalyst_center/templates/netbox_catalyst_center/: client_tab.html  client_tab_content.html  comparison.html  config_audit.html  config_diff.html  config_search.html  device_tab.html  endpoint_tab.html  import.html  neighbor_discovery.html  network_device_tab.html  network_device_tab_content.html  settings.html
netbox_catalyst_center/templates/netbox_catalyst_center/widgets/: catalyst_status.html
