[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-catalyst-center"
version = "1.3.4"
description = "NetBox plugin to display Cisco Catalyst Center client details"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "sieteunoseis", email = "jeremy.worden@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["netbox", "cisco", "catalyst-center", "dnac", "wireless", "plugin"]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/sieteunoseis/netbox-catalyst-center"
Repository = "https://github.com/sieteunoseis/netbox-catalyst-center"
Issues = "https://github.com/sieteunoseis/netbox-catalyst-center/issues"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["netbox_catalyst_center*"]

[tool.setuptools.package-data]
netbox_catalyst_center = ["templates/**/*.html"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 120
